feat: some refactoring